--- a/app/src/main/res/layout/activity_marker.xml
+++ b/app/src/main/res/layout/activity_marker.xml
@@ -35,7 +35,7 @@
 
                 <TextView
                     android:id="@+id/mytextview"
-                    android:layout_width="282dp"
+                    android:layout_width="266dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="15dp"
                     android:layout_marginStart="30dp"
@@ -102,7 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="20dp"
-                android:text="STATS"
+                android:text="No Stats available"
                 android:textAppearance="@android:style/TextAppearance.Material.Small"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -170,14 +170,14 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <TextView
                     android:id="@+id/jsonData2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="20dp"
-
-                    android:text="COMMENTS"
+                    android:text="No comments yet"
                     android:textAppearance="@android:style/TextAppearance.Material.Small"
                     android:textSize="16sp" />
             </ScrollView>
